bignotice: fix .noclick:hover on IE

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -51,7 +51,7 @@ body.bigNoticeOpen #app
 
 #bigNotice.noclick
 	#content
-		cursor: default
+		cursor: default !important
 
 	#content:hover
 		text-decoration: initial
